--- a/WEBP4/WEBP4/WEBP4.csproj
+++ b/WEBP4/WEBP4/WEBP4.csproj
@@ -181,6 +181,7 @@
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
     <Content Include="favicon.ico" />
+    <Content Include="Funciones\ConsultarSaldosApi.js" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.bundle.js" />
